# dixit-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  BACKEND_CHANGES.md  MANUAL_HAPPY_PATH.md  README.md  docker-compose.dev.yml  docker-compose.yml  przykładowe_zapytania.md
bot/: .dockerignore  Dockerfile  pyproject.toml
bot/src/: bot.py  main.py  setup.py  util.py
changelog/: BACKEND_CHANGES_2.md  CHANGELOG_SESSION2.md
client/: README.md  main.tsx  package-lock.json  postcss.config.mjs  tsconfig.json  vite.config.ts
client/src/app/: App.tsx  routes.tsx
client/src/app/components/: ApiPendingBanner.tsx  ApiStateMessage.tsx  CardCanvasEditor.tsx  DemoModeBanner.tsx  DevToolsPanel.tsx  GameCard.tsx  GameNavigationBridge.tsx  GameplayComponents.tsx  GuestOnly.tsx  LobbyPlayerList.tsx  MainLayout.tsx  MenuHelpFooter.tsx  PlayfulBackground.tsx  (+3 more)
server/: README_TESTS.md  WEBHOOKS_GITHUB_DISCORD.md  app.js  appFactory.js  jest.config.js  jest.unit.config.js  package-lock.json  package.json
server/__tests__/: all.api.test.js  auth.api.test.js  game.socket.test.js  lobby.api.test.js  scoring.unit.test.js
server/config/: db.js
server/handlers/: gameHandler.js  lobbyHandler.js
server/lib/: botClient.js  botOrchestrator.js  gameTimer.js  scoring.js  socketBus.js
server/prisma/: schema.prisma
server/routes/: cards.js  game.js  lobby.js  personalization.js  stats.js  user.js  webhooks.js
server/scripts/: seed-placeholder.js  seed-real-cards.js  seed.js  verifyGithubWebhookDryRun.js
server/test/: globalSetup.js  jest.setup.js  provision_test_db.sh
(+37 files in other folders)
